--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blog-website-vue",
   "version": "0.1.0",
   "private": true,
+  "main":"src/api/api.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
